| Summary: | ASTERISK-29365: taskprocessor: Can cause assert at shutdown | ||
| Reporter: | Joshua C. Colp (jcolp) | Labels: | |
| Date Opened: | 2021-03-23 08:06:11 | Date Closed: | 2022-02-15 17:42:24.000-0600 |
| Priority: | Minor | Regression? | No |
| Status: | Closed/Complete | Components: | Core/General |
| Versions: | 16.16.2 18.2.2 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) backtrace_14892.txt | |
| Description: | When shutting down there can still be taskprocessor threads in progress. If the tps_shutdown function is called before these threads complete then an assert will occur due to passing a NULL container into ao2_link. | ||
| Comments: | By: Joshua C. Colp (jcolp) 2021-03-23 08:06:39.273-0500 This is a backtrace showing this happening. By: Friendly Automation (friendly-automation) 2022-02-15 17:42:25.958-0600 Change 18020 merged by Friendly Automation: taskprocessor.c: Prevent crash on graceful shutdown [https://gerrit.asterisk.org/c/asterisk/+/18020|https://gerrit.asterisk.org/c/asterisk/+/18020] By: Friendly Automation (friendly-automation) 2022-02-15 17:47:43.514-0600 Change 17998 merged by Friendly Automation: taskprocessor.c: Prevent crash on graceful shutdown [https://gerrit.asterisk.org/c/asterisk/+/17998|https://gerrit.asterisk.org/c/asterisk/+/17998] By: Friendly Automation (friendly-automation) 2022-02-15 17:48:48.264-0600 Change 17955 merged by Friendly Automation: taskprocessor.c: Prevent crash on graceful shutdown [https://gerrit.asterisk.org/c/asterisk/+/17955|https://gerrit.asterisk.org/c/asterisk/+/17955] By: Friendly Automation (friendly-automation) 2022-02-16 11:38:05.024-0600 Change 17999 merged by Joshua Colp: taskprocessor.c: Prevent crash on graceful shutdown [https://gerrit.asterisk.org/c/asterisk/+/17999|https://gerrit.asterisk.org/c/asterisk/+/17999] | ||